@@ -260,31 +260,35 @@ function showChunk( $namespace = NS_MAIN, $from, $including = false ) {
 	if ( $including ) {
 		$out2 = '';
 	} else {
-
-		# Get the last title from previous chunk
-		$dbr = wfGetDB( DB_SLAVE );
-		$res_prev = $dbr->select(
-			'page',
-			'page_title',
-			array( 'page_namespace' => $namespace, 'page_title < '.$dbr->addQuotes($from) ),
-			$fname,
-			array( 'ORDER BY' => 'page_title DESC', 'LIMIT' => $this->maxPerPage, 'OFFSET' => ($this->maxPerPage - 1 ) )
-		);
-
-		# Get first title of previous complete chunk
-		if( $dbr->numrows( $res_prev ) >= $this->maxPerPage ) {
-			$pt = $dbr->fetchObject( $res_prev );
-			$prevTitle = Title::makeTitle( $namespace, $pt->page_title );
+		if( $from == '' ) {
+			// First chunk; no previous link.
+			$prevTitle = null;
 		} else {
-			# The previous chunk is not complete, need to link to the very first title
-			# available in the database
-			$reallyFirstPage_title = $dbr->selectField( 'page', 'page_title', array( 'page_namespace' => $namespace ), $fname, array( 'LIMIT' => 1) );
+			# Get the last title from previous chunk
+			$dbr = wfGetDB( DB_SLAVE );
+			$res_prev = $dbr->select(
+				'page',
+				'page_title',
+				array( 'page_namespace' => $namespace, 'page_title < '.$dbr->addQuotes($from) ),
+				$fname,
+				array( 'ORDER BY' => 'page_title DESC', 'LIMIT' => $this->maxPerPage, 'OFFSET' => ($this->maxPerPage - 1 ) )
+			);
 
-			# Show the previous link if it s not the current requested chunk
-			if( $from != $reallyFirstPage_title ) {
-				$prevTitle =  Title::makeTitle( $namespace, $reallyFirstPage_title );
+			# Get first title of previous complete chunk
+			if( $dbr->numrows( $res_prev ) >= $this->maxPerPage ) {
+				$pt = $dbr->fetchObject( $res_prev );
+				$prevTitle = Title::makeTitle( $namespace, $pt->page_title );
 			} else {
-				$prevTitle = null;
+				# The previous chunk is not complete, need to link to the very first title
+				# available in the database
+				$reallyFirstPage_title = $dbr->selectField( 'page', 'page_title', array( 'page_namespace' => $namespace ), $fname, array( 'LIMIT' => 1) );
+
+				# Show the previous link if it s not the current requested chunk
+				if( $from != $reallyFirstPage_title ) {
+					$prevTitle =  Title::makeTitle( $namespace, $reallyFirstPage_title );
+				} else {
+					$prevTitle = null;
+				}
 			}
 		}
 
