@@ -149,6 +149,8 @@ lighter making things easier to read.
 * (bug 8652) Catch exceptions generated by malformed XML in multipage media
 * (bug 8782) Help text in Makefile
 * (bug 8780) Clarify message for command-line scripts if LocalSettings.php exists but is not readable
+* (bug 8777) Suppress 'previous' link on Special:Allpages when at first page
+
 
 == Languages updated ==
 
